@@ -5,6 +5,7 @@
 	Remove word-count.
 	Remove vimpulse.
 	Remove ifdef.
+	Remove code-imports.
 
 	* init-elpa.el ("rust-mode"): Config rustfmt, racer, ac-racer.
 	(rust-mode-hook): Add cargo.
